--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -259,7 +259,7 @@
                         <TextBlock
                             Padding="0,0,0,16"
                             HorizontalAlignment="Center"
-                            Text="Selected Character Skin:" />
+                            Text="Selected In-Game Skin:" />
                         <TextBlock
                             HorizontalAlignment="Center"
                             FontFamily="{StaticResource GenshinFont}"
