Author now visible Right click to copy links

--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -482,6 +482,14 @@
                                         IsReadOnly="True"
                                         Tag="Folder Name" />
 
+                                    <controls:DataGridTextColumn
+                                        Width="SizeToCells"
+                                        Binding="{Binding Author, Mode=OneWay}"
+                                        CanUserSort="True"
+                                        Header="Author"
+                                        IsReadOnly="True"
+                                        Tag="Author Name" />
+
                                 </controls:DataGrid.Columns>
 
                             </controls:DataGrid>
