--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -331,6 +331,12 @@
                                 Glyph="&#xE74B;"
                                 Visibility="Collapsed" />
 
+                            <TextBlock
+                                Margin="0,0,-16,0"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Bottom"
+                                Text="{x:Bind ModCount, Mode=OneWay}"
+                                Visibility="{x:Bind HasMods, Mode=OneWay, Converter={StaticResource BoolToVisibleConverter}}" />
 
                             <TextBlock
                                 Grid.Row="1"
