--- a/src/GIMI-ModManager.WinUI/Views/ModInstallerPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ModInstallerPage.xaml
@@ -345,15 +345,34 @@
 
 
 
-                <Button
-                    Grid.Row="2"
-                    HorizontalAlignment="Right"
-                    Command="{x:Bind ViewModel.AddModCommand}"
-                    Content="Add Mod">
-                    <Button.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="S" Modifiers="Control" />
-                    </Button.KeyboardAccelerators>
-                </Button>
+                <Grid Grid.Row="2" HorizontalAlignment="Stretch">
+
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <CheckBox
+                        Margin="8,0"
+                        Command="{x:Bind ViewModel.EnableOnlyToggleCommand}"
+                        Content="Enable this mod and disable others?"
+                        IsChecked="{x:Bind ViewModel.EnableThisMod, Mode=TwoWay}"
+                        ToolTipService.ToolTip="This will enable this mod and disable all other mods. If a character then it will only disable for that characters skin" />
+
+                    <Button
+                        Grid.Column="1"
+                        Margin="8,0"
+                        HorizontalAlignment="Right"
+                        Command="{x:Bind ViewModel.AddModCommand}"
+                        Content="Add Mod">
+                        <Button.KeyboardAccelerators>
+                            <KeyboardAccelerator Key="S" Modifiers="Control" />
+                        </Button.KeyboardAccelerators>
+                    </Button>
+
+                </Grid>
+
 
 
             </Grid>
