--- a/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
@@ -10,6 +10,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:services="using:GIMI_ModManager.Core.Services"
     xmlns:winUiEx="using:WinUIEx"
+    xmlns:viewModels="using:GIMI_ModManager.WinUI.ViewModels"
     x:Name="RootWindow"
     mc:Ignorable="d">
 
@@ -54,7 +55,7 @@
                     ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}"
                     SelectionMode="None">
                     <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="services:UpdateCheckResult">
+                        <DataTemplate x:DataType="viewModels:UpdateCheckResultVm">
                             <Grid
                                 Margin="0,8"
                                 Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
@@ -63,7 +64,7 @@
                                 <controls:BoolBorder
                                     BorderColor="{ThemeResource AccentFillColorSelectedTextBackgroundBrush}"
                                     BorderSize="2"
-                                    ShowBorder="{x:Bind IsNewer}">
+                                    ShowBorder="{x:Bind UpdateCheckResult.IsNewer}">
                                     <Grid Margin="8">
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto" />
@@ -79,13 +80,13 @@
                                             <TextBlock
                                                 IsTextSelectionEnabled="True"
                                                 Style="{ThemeResource SubtitleTextBlockStyle}"
-                                                Text="{x:Bind FileName}" />
+                                                Text="{x:Bind UpdateCheckResult.FileName}" />
 
                                             <TextBlock
                                                 Margin="8,0"
                                                 VerticalAlignment="Bottom"
                                                 IsTextSelectionEnabled="True"
-                                                Text="{x:Bind DateAdded}" />
+                                                Text="{x:Bind UpdateCheckResult.DateAdded}" />
                                         </StackPanel>
 
 
@@ -94,21 +95,44 @@
                                             Grid.Row="1"
                                             Grid.Column="0"
                                             IsTextSelectionEnabled="True"
-                                            Text="{x:Bind Description}" />
+                                            Text="{x:Bind UpdateCheckResult.Description}" />
 
                                         <TextBlock
                                             Grid.Row="0"
                                             Grid.Column="1"
                                             HorizontalAlignment="Right"
                                             Text="New since last check"
-                                            Visibility="{Binding Path=IsNewer, Mode=OneTime, Converter={StaticResource BoolToVisibilityConverter}}" />
+                                            Visibility="{Binding Path=UpdateCheckResult.IsNewer, Mode=OneTime, Converter={StaticResource BoolToVisibilityConverter}}" />
 
-                                        <Button
-                                            Grid.Row="1"
-                                            Grid.Column="1"
-                                            HorizontalAlignment="Right"
-                                            Content="(Not Implemented) Download "
-                                            IsEnabled="False" />
+                                        <StackPanel                         Grid.Row="1"
+                                                             
+                                                                            Grid.Column="1">
+                                            <Grid>
+                                                <Button
+                                                    Visibility="{Binding Path=ShowDownloadButton, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
+                                                    HorizontalAlignment="Right"
+                                                    Command="{x:Bind StartDownloadCommand}"
+                                                    Content="Download"
+                                                    Width="90"
+                                                    IsEnabled="{x:Bind IsDownloadButtonEnabled, Mode=OneWay}" />
+
+                                                <Button
+                                                    Visibility="{Binding Path=ShowInstallButton, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
+
+                                                    HorizontalAlignment="Right"
+                                                    Command="{x:Bind InstallCommand}"
+                                                    Width="90"
+                                                    IsEnabled="{x:Bind CanInstall, Mode=OneWay}"
+                                                    Content="Install"
+
+                                                />
+                                            </Grid>
+
+
+                                            <ProgressBar HorizontalAlignment="Right" Width="90" Maximum="100" Value="{x:Bind DownloadProgress, Mode=OneWay}"/>
+
+                                        </StackPanel>
+
                                     </Grid>
                                 </controls:BoolBorder>
                             </Grid>
