--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -577,13 +577,26 @@
                                     Text="{x:Bind ViewModel.ModPaneVM.SelectedModModel.Name, Mode=TwoWay}"
                                     TextAlignment="Center" />
 
-                                <Button
+                                <SplitButton
                                     Grid.Column="1"
                                     Command="{x:Bind ViewModel.ModPaneVM.ToggleEditingModNameCommand}"
                                     IsEnabled="{x:Bind ViewModel.ModPaneVM.IsReadOnlyMode, Mode=OneWay, Converter={StaticResource BoolInverter}}">
                                     <FontIcon Glyph="&#xE70F;" />
-                                </Button>
+                                    <SplitButton.Flyout>
+                                        <MenuFlyout Placement="Bottom">
+                                            <MenuFlyoutItem
+                                                Command="{x:Bind ViewModel.ModPaneVM.SetModIniFileCommand}"
+                                                Text="Set mod .ini file"
+                                                ToolTipService.ToolTip="Set the mod .ini file to be read by JASM" />
+                                            <MenuFlyoutItem
+                                                Command="{x:Bind ViewModel.ModPaneVM.ClearSetModIniFileCommand}"
+                                                Icon="Clear"
+                                                Text="Ignore .ini file for this mod"
+                                                ToolTipService.ToolTip="JASM will not look for merged.ini file and ignore keyswaps for this mod" />
+                                        </MenuFlyout>
+                                    </SplitButton.Flyout>
 
+                                </SplitButton>
                             </Grid>
 
                             <Grid Grid.Row="3">
