Fixed splitter showing if not mods

--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -740,6 +740,7 @@
                             </Grid>
                         </Grid>
                         <controls:GridSplitter
+                            x:Name="ModPaneSplitter"
                             Grid.Column="1"
                             Width="8"
                             Height="40"
