feat: When navigating back from a character page to the character overview, it will now scroll that character into view

--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -256,6 +256,7 @@
 
 
         <controls:AdaptiveGridView
+            x:Name="CharactersGridView"
             Grid.Row="2"
             Margin="0,0,0,8"
             animations:Connected.ListItemElementName="itemThumbnail"
